Add attribute in authentication model so the login button message change for login/register

--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -14,7 +14,7 @@
     </div>
     <div class="newEntry">
         <div class="authentication-btn">
-            <span class="submitAuthentication">Log in</span>
+            <span class="submitAuthentication">{{messageButton}}</span>
         </div>
         <div class="switch-authentication">
             {{#if newEntry}}
