Fix css menu in tablet mode in movie page

--- a/css/movieAndTvShow.css
+++ b/css/movieAndTvShow.css
@@ -126,9 +126,13 @@ h6 {
         max-height: 400px !important;
         padding-top: 120px;
     }
-
+    
+    .movie-browser{
+        position: absolute;
+        z-index: -1;
+    }
+    
     .movie-browser .phoneScreenAlign {
-        position: relative;
         background-color: blue;
         width: 620px;
         height: 620px;
