--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ div #content {
     max-width: 900px;
     margin: 0 auto;
     padding: 30px 2% 0;
-    background-color: #222121;
+    background-color: black;
 
 }
 
