--- a/css/movieAndTvShow.css
+++ b/css/movieAndTvShow.css
@@ -18,49 +18,83 @@ h6 {
 }
 
 .movieDescription {
+    width: 100%;
     color: #999;
     font-family: "Helvetica Neue";
 }
 
-.watchButton {
-    background: #3498db;
-    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-    background-image: -o-linear-gradient(top, #3498db, #2980b9);
-    background-image: linear-gradient(to bottom, #3498db, #2980b9);
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    height: 50px;
-    width: 130px;
+.itunesLogo {
+    display: block;
+    float: right;
 }
 
-.watchButton:hover {
-    background: #3cb0fd;
-    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-    text-decoration: none;
+
+.watchButton {
+    -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+    box-shadow:inset 0px 1px 0px 0px #ffffff;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+    background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+    background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+    background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+    background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+    background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf',GradientType=0);
+    background-color:#ededed;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    cursor:pointer;
+    color:#777777;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
 }
+.watchButton:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+    background:-moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+    background:-webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+    background:-o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+    background:-ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+    background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed',GradientType=0);
+    background-color:#dfdfdf;
+}
+.watchButton:active {
+    position:relative;
+    top:1px;
+}
+
 
 @media screen and (max-width: 640px) {
 
+    div #content {
+        width: 95% ;
+        height: auto;
+    }
+
+    .movie-browser .phoneScreenAlign {
+        position: relative;
+        padding-bottom: 40px;
+        width: 100%;
+        height:auto;
+        margin: 0 auto;
+    }
+
     div .movieCover {
-        max-width: 150px !important;
-        max-height: 450px !important;
+        width: 30% ;
+        height: auto;
+        display: block;
     }
 
     div .movieCover img {
-        max-width: 150px !important;
-        max-height: 450px !important;
+        width: 100%;
+        height: auto;
         padding-left: 5px;
         padding-top: 5px;
 
@@ -71,6 +105,23 @@ h6 {
         font-size: 20px;
     }
 
+    .movie-browser .movieTitleWrapper {
+        position: absolute;
+        width: 65%;
+        bottom: 5px;
+        /* background-color: #4CAF50;*/
+    }
+
+    .movie-browser .movieTitleWrapper {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        width: 65%;
+        bottom: 5px;
+        /* background-color: #4CAF50;*/
+
+    }
+
     .movieTitleWrapper img {
         height: 60px;
         width: 60px;
@@ -79,7 +130,7 @@ h6 {
 
     .movieTitleWrapper a {
         text-decoration:none;
-        color: white;
+
 
     }
 
@@ -88,80 +139,82 @@ h6 {
         color: dodgerblue;
     }
 
-    .movie-browser .phoneScreenAlign {
-        position: relative;
-        background-color: blue;
-        width: 400px;
-        height: 300px;
-    }
+
 
     .phoneScreenAlign .watchButtonWrapper {
         padding-top: 40px;
     }
 
-    .movie-browser .movieTitleWrapper {
-        position: absolute;
-        right: 5px;
-        top: 5px;
-        width: 230px;
-        bottom: 5px;
-        
-    }
+
 
     .movieDescription{
-        padding-top: 20px;
+        padding-top: 15px;
+        font-size: 18px;
+        width: 100%;
     }
 
     .linksAccess {
-        padding-bottom: 20px;
-        display: block;
-        background-color: #FFCC00;
-
-    }
-
-     a img{
-        padding-top: 0px;
-        height: 30px;
-        width: 30px;
+        padding-top: 10px;
+        width: 80px;
+        height: auto;
+        margin: 0 auto;
     }
 
     span {
         display: inline-block;
+    }
+
+
+    .watchButtonWrapper {
+        height: 50px;
+        width: 40px;
+        padding-bottom: 10px;
+
+    }
+
+    .linksAccess span .itunesLogo {
+        width: 40%;
+        height: auto;
+    }
+
+    .linksAccess span .itunesLogo img {
+        width: 100%;
+        height: auto;
     }
 }
 
 @media screen and (max-width: 960px) and (min-width:640px) {
 
     div #content {
-        max-width: 620px !important;
-        max-height: 410px !important;
+        width: 95%;
+        height: auto;
         padding-top: 120px;
     }
 
     .movie-browser .phoneScreenAlign {
         position: relative;
-        width: 620px;
-        height: 410px;
+        width:95%;
+        height: auto;
+        margin: 0 auto;
     }
 
     div .movieCover {
-        max-width: 350px !important;
-        max-height: 400px !important;
+        width: 40%;
+        height: auto;
     }
 
     .movie-browser .movieTitleWrapper {
         position: absolute;
         right: 5px;
         top: 5px;
-        width: 300px;
-        height: 300px;
+        width: 55%;
+        height: auto;
         bottom: 5px;
-
     }
 
     div .movieCover img {
-        max-width: 350px !important;
-        max-height: 400px !important;
+        width: 100%;
+        height: auto;
     }
 
     .movieSpecWrapper {
@@ -171,58 +224,76 @@ h6 {
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 15px;
+        font-size: 22px;
+        width: 100%;
     }
 
-      a img{
-        height: 40px;
-        width: 40px;
-        bottom: 40px;
-        display: inline-block;
+    a img{
+        height: 60px;
+        width: 60px;
+
         padding-left: 30px;
     }
 
     .linksAccess {
-        display: table;
         padding-top: 30px;
-        background-color: #FFCC00;
+        width: 45%;
+        margin: 0 auto;
+    }
+
+    .watchButtonWrapper {
+        height: 50px;
+        width: 40px;
+        padding-bottom: 10px;
+
     }
 
     span {
-        display: inline-block;;
+        display: inline-block;
+
+    }
+
+    .linksAccess span .itunesLogo {
+        width: 40%;
+        height: auto;
+    }
+
+    .linksAccess span .itunesLogo img {
+        width: 100%;
+        height: auto;
     }
 }
 
 @media screen and (max-width: 2800px) and (min-width:960px) {
     div #content {
-        max-width: 960px !important;
-        max-height: 800px !important;
+        width: 60% ;
+        height: auto;
         padding-top: 120px;
     }
 
     .movie-browser .phoneScreenAlign {
-        position: relative;
-        width: 620px;
-        height: 410px;
+        position: absolute;
+        width: 60%;
+        height: auto;
+        margin: 0 auto;
     }
 
     div .movieCover {
-        max-width: 350px !important;
-        max-height: 400px !important;
+        width:30% ;
+        height: auto;
     }
 
     .movie-browser .movieTitleWrapper {
         position: absolute;
         right: 5px;
         top: 5px;
-        width: 300px;
-        height: 300px;
-        bottom: 5px;
+        width: 65%;
+        height: auto;
     }
 
     div .movieCover img {
-        max-width: 350px !important;
-        max-height: 400px !important;
+        width:100% ;
+        height: auto;
     }
 
     .movieSpecWrapper {
@@ -236,20 +307,42 @@ h6 {
     }
 
     a img{
-        height: 40px;
-        width: 40px;
+        height: 70px;
+        width: 70px;
         bottom: 40px;
         display: inline-block;
         padding-left: 30px;
     }
 
     .linksAccess {
-        display: table;
         padding-top: 30px;
-        background-color: #FFCC00;
+        width: 45%;
+        margin: 0 auto;
     }
 
     span {
         display: inline-block;;
+    }
+
+    .watchButtonWrapper {
+        height: 50px;
+        width: 40px;
+        padding-bottom: 10px;
+
+    }
+
+    span {
+        display: inline-block;
+
+    }
+
+    .linksAccess span .itunesLogo {
+        width: 40%;
+        height: auto;
+    }
+
+    .linksAccess span .itunesLogo img {
+        width: 100%;
+        height: auto;
     }
 }
