--- a/css/movieAndTvShow.css
+++ b/css/movieAndTvShow.css
@@ -29,6 +29,7 @@ h6 {
 }
 
 
+
 .watchButton {
     -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
     -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -80,7 +81,6 @@ h6 {
 
     .movie-browser .phoneScreenAlign {
         position: relative;
-        padding-bottom: 40px;
         width: 100%;
         height:auto;
         margin: 0 auto;
@@ -109,6 +109,7 @@ h6 {
         position: absolute;
         width: 65%;
         bottom: 5px;
+        padding-bottom: 20px;
         /* background-color: #4CAF50;*/
     }
 
@@ -142,14 +143,12 @@ h6 {
 
 
     .phoneScreenAlign .watchButtonWrapper {
-        padding-top: 40px;
+        padding-top: 20px;
     }
-
-
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 18px;
+        font-size: 1em;
         width: 100%;
     }
 
@@ -181,6 +180,12 @@ h6 {
         width: 100%;
         height: auto;
     }
+
+    div .preview {
+        padding-top: 270px;
+    }
+
+
 }
 
 @media screen and (max-width: 960px) and (min-width:640px) {
@@ -210,6 +215,7 @@ h6 {
         width: 55%;
         height: auto;
         bottom: 5px;
+        padding-bottom: 40px;
     }
 
     div .movieCover img {
@@ -224,7 +230,7 @@ h6 {
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 22px;
+        font-size: 1.7em;
         width: 100%;
     }
 
@@ -262,6 +268,11 @@ h6 {
         width: 100%;
         height: auto;
     }
+
+    div .preview {
+        padding-top: 60px;
+
+    }
 }
 
 @media screen and (max-width: 2800px) and (min-width:960px) {
@@ -289,6 +300,7 @@ h6 {
         top: 5px;
         width: 65%;
         height: auto;
+        padding-bottom: 40px;
     }
 
     div .movieCover img {
@@ -303,7 +315,7 @@ h6 {
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 24px;
+        font-size: 1.1em;
     }
 
     a img{
@@ -344,5 +356,10 @@ h6 {
     .linksAccess span .itunesLogo img {
         width: 100%;
         height: auto;
+    }
+
+    div .preview {
+        padding-top: 120px;
+
     }
 }
