--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -25,5 +25,9 @@
                 </span>
             </div>
         </div>
+        <div class="preview">
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/iszwuX1AK6A" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
+
 </div>
