--- a/css/movieAndTvShow.css
+++ b/css/movieAndTvShow.css
@@ -29,7 +29,6 @@ h6 {
 }
 
 
-
 .watchButton {
     -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
     -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -79,9 +78,9 @@ h6 {
         height: auto;
     }
 
-
     .movie-browser .phoneScreenAlign {
         position: relative;
+        padding-bottom: 40px;
         width: 100%;
         height:auto;
         margin: 0 auto;
@@ -110,7 +109,6 @@ h6 {
         position: absolute;
         width: 65%;
         bottom: 5px;
-        padding-bottom: 20px;
         /* background-color: #4CAF50;*/
     }
 
@@ -144,12 +142,14 @@ h6 {
 
 
     .phoneScreenAlign .watchButtonWrapper {
-        padding-top: 20px;
+        padding-top: 40px;
     }
+
+
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 1em;
+        font-size: 18px;
         width: 100%;
     }
 
@@ -181,12 +181,6 @@ h6 {
         width: 100%;
         height: auto;
     }
-
-    div .preview {
-        padding-top: 270px;
-    }
-
-
 }
 
 @media screen and (max-width: 960px) and (min-width:640px) {
@@ -197,14 +191,9 @@ h6 {
         padding-top: 120px;
     }
 
-    .movie-browser{
-        position: absolute;
-        z-index: -1;
-    }
-
     .movie-browser .phoneScreenAlign {
         position: relative;
-        width:100%;
+        width:95%;
         height: auto;
         margin: 0 auto;
     }
@@ -221,7 +210,6 @@ h6 {
         width: 55%;
         height: auto;
         bottom: 5px;
-        padding-bottom: 40px;
     }
 
     div .movieCover img {
@@ -236,7 +224,7 @@ h6 {
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 1.7em;
+        font-size: 22px;
         width: 100%;
     }
 
@@ -274,11 +262,6 @@ h6 {
         width: 100%;
         height: auto;
     }
-
-    div .preview {
-        padding-top: 60px;
-
-    }
 }
 
 @media screen and (max-width: 2800px) and (min-width:960px) {
@@ -288,14 +271,9 @@ h6 {
         padding-top: 120px;
     }
 
-    .movie-browser{
-        position: absolute;
-        z-index: -1;
-    }
-
     .movie-browser .phoneScreenAlign {
-        position: relative;
-        width: 100%;
+        position: absolute;
+        width: 60%;
         height: auto;
         margin: 0 auto;
     }
@@ -311,7 +289,6 @@ h6 {
         top: 5px;
         width: 65%;
         height: auto;
-        padding-bottom: 40px;
     }
 
     div .movieCover img {
@@ -326,7 +303,7 @@ h6 {
 
     .movieDescription{
         padding-top: 15px;
-        font-size: 1.1em;
+        font-size: 24px;
     }
 
     a img{
@@ -367,10 +344,5 @@ h6 {
     .linksAccess span .itunesLogo img {
         width: 100%;
         height: auto;
-    }
-
-    div .preview {
-        padding-top: 250px;
-
     }
 }
