--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -25,41 +25,12 @@
                 </span>
             </div>
         </div>
-        <div class="preview">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/EvGL42rywPM" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="accordion">
-            <div id="tab-1">
-                <a href="#tab-1" class="tab">Saison 1</a>
-                <div class="content">
-                    <ul>
-                        <li><a href="#">Episode 1</a></li>
-                        <li><a href="#">Episode 2</a></li>
-                        <li><a href="#">Episode 3</a></li>
-                        <li><a href="#">Episode 4</a></li>
-                        <li><a href="#">Episode 5</a></li>
-                        <li><a href="#">Episode 6</a></li>
-                        <li><a href="#">Episode 7</a></li>
-                        <li><a href="#">Episode 8</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div id="tab-2">
-                <a href="#tab-2" class="tab">Saison 2</a>
-                <div class="content">
-                    <ul>
-                        <li><a href="#">Episode 1</a></li>
-                        <li><a href="#">Episode 2</a></li>
-                        <li><a href="#">Episode 3</a></li>
-                        <li><a href="#">Episode 4</a></li>
-                        <li><a href="#">Episode 5</a></li>
-                        <li><a href="#">Episode 6</a></li>
-                        <li><a href="#">Episode 7</a></li>
-                        <li><a href="#">Episode 8</a></li>
-                    </ul>
-                </div>
-            </div>
+        <div class="accordeon">
+            <ul class="accordeon-inner">
+                <li>Coffee</li>
+                <li>Tea</li>
+                <li>Coca Cola</li>
+            </ul>
         </div>
     </div>
-
 </div>
