--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -17,13 +17,17 @@
             </div>
             <div class="movieDescription">{{description}}</div>
             <div class="linksAccess">
-                <span class="itunesLogo"><a href="{{link}}">
-                    <img src="img/itunesLogo.png"></a>
-                </span>
                 <span class="watchButtonWrapper">
                     <a class="watchButton" href="">Watch Movie</a>
                 </span>
+                <span class="itunesLogo"><a href="{{link}}">
+                    <img src="img/itunesLogo.png"></a>
+                </span>
             </div>
         </div>
+        <div class="preview">
+            <iframe src="https://www.youtube.com/embed/iszwuX1AK6A" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
+
 </div>
