--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -3,8 +3,9 @@
         <span id="expend-menu-icon">
             <button class="hamburger"><img src="img/hamburger_menu.svg"/></button>
         </span>
+
         <span id="expend-member-menu-icon">
-            <button class="member-hamburger"><img src="img/member_icon.png"/></button>
+            <button class="member-hamburger"><div class="username">user</div><img src="img/member_icon.png"/></button>
         </span>
         <a href="#{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
     </div>
@@ -26,6 +27,7 @@
                     <img id="search-icon" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png">
                 </span>
             </div>
+            <div class="user-name"> {{idName}} </div>
             <div class="research-options collapsed">advanced research</div>
         </div>
 
