--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 @media (max-width: 600px) {
     .umovie-logo {
         z-index: 10000;
@@ -8,8 +10,13 @@
     }
 
     .member-menu {
-        z-index: 100;
+        z-index: 1000;
+        height: 30%;
     }
+}
+
+.text h1, h2 {
+    color: #FFCC00;
 }
 
 .movie-banner {
@@ -95,6 +102,12 @@ button {
     height: 30px;
 }
 
+.username {
+    color: white;
+    font-family: "Helvetica Neue";
+    font-size: 13px;
+
+}
 .member-hamburger {
     border: none;
     background-color: transparent;
@@ -713,9 +726,6 @@ button {
         -moz-osx-font-smoothing: grayscale;
     }
 
-    .text h1, h2 {
-        color: #FFCC00;
-    }
 
     .text h1 {
         font-size: 4.1em;
@@ -726,6 +736,11 @@ button {
     .text h2 {
         text-align: center;
         font-size: 1.6em;
+    }
+
+    .member-menu {
+        z-index: 1000;
+        height: 900px;
     }
 
     .authentification {
@@ -768,6 +783,12 @@ button {
 
     .search-container {
         width: 100%;
+    }
+
+    .navigation-bar {
+        height: 55%;
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 10%, transparent);
+
     }
 
 }
