--- a/css/movieAndTvShow.css
+++ b/css/movieAndTvShow.css
@@ -262,7 +262,8 @@ h6 {
         height: 50px;
         width: 40px;
         padding-bottom: 10px;
-
+    }
+    
     .movie-browser{
         margin-left:20%;
         margin-right: 15%;
