messin' around with git

--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="preview">
-            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/EvGL42rywPM" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/EvGL42rywPM" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="accordion">
             <div id="tab-1">
@@ -61,4 +61,5 @@
             </div>
         </div>
     </div>
+
 </div>
