--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -1,33 +1,16 @@
-<div class="movie-browser">
-    <div class="phoneScreenAlign">
-        <div class="movieCover"><img src="{{image}}"></div>
-        <div class="movieTitleWrapper">
-            <div class="titleInner">
-                <h1 class="movieTitle">
-                    {{title}}
-                </h1>
-            </div>
-            <div class="movieSpecWrapper">
-                <div class="dateAndRating">
-                    <h6 class="blueHeader">{{date}} - {{rating}}</h6>
-                </div>
-                <div class="genre">
-                    <h6>Genre: &nbsp;</h6><span><h6 class="blueHeader">{{genre}}</h6></span>
-                </div>
-            </div>
-            <div class="movieDescription">{{description}}</div>
-            <div class="linksAccess">
-                <span class="watchButtonWrapper">
-                    <a class="watchButton" href="">Watch Movie</a>
-                </span>
-                <span class="itunesLogo"><a href="{{link}}">
-                    <img src="img/itunesLogo.png"></a>
-                </span>
-            </div>
-        </div>
-        <div class="preview">
-            <iframe src="https://www.youtube.com/embed/iszwuX1AK6A" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
+<head>
+    <title>{{name}}</title>
+</head>
+
+<div class="movie">
+    <div class="movie-name"> {{name}}</div>
+    <div class="movie-cover"> {{cover}}</div>
+    <div class="movie-genre">{{genre}}</div>
+    <div class="movie-date">{{date}}</div>
+    <div class="movie-release">{{releaseDate}}</div>
+    <div class="movie-description">{{description}}</div>
+</div>
+
+<div class="movie-preview">
 
 </div>
