--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -12,4 +12,7 @@
     <div class="tvShow-description"> {{longDescription}}</div>
 </div>
 
-<div class="tvShow-preview"></div>
+<div class="tvShow-preview">
+	<div class="tvShow-preview">Preview <span>{{previewUrl}}</span></div>
+
+</div>
