sharing for progress

--- a/js/templates/creationWatchlist.html
+++ b/js/templates/creationWatchlist.html
@@ -5,7 +5,5 @@
 
 <body>
 	<div class="newWatchlistName">Name</div> <input class="newWatchlistNameInput" type="text">
-	<form>
-		<button id="watchlistCreationButton">Create</button>
-	</form>
+	<div id="addNewWatchList">Add watchlist</div>
 </body>
